[gd_scene load_steps=7 format=3 uid="uid://brwsxsw3vt0au"]

[ext_resource type="Script" uid="uid://d1oujlk2gjxwx" path="res://src/Utility/Outdated/DialogBox.gd" id="1"]
[ext_resource type="PackedScene" path="res://src/Utility/Outdated/DialogBranch.tscn" id="5"]

[sub_resource type="Resource" id="Resource_efttx"]
metadata/__load_path__ = "res://assets/UI/DialogBox.png"

[sub_resource type="Resource" id="Resource_tui57"]
metadata/__load_path__ = "res://assets/UI/Face/Recruit.png"

[sub_resource type="Resource" id="Resource_qfpbl"]
metadata/__load_path__ = "res://addons/SyndiBox/syndibox.gd"

[sub_resource type="Resource" id="Resource_w3qqd"]
metadata/__load_path__ = "res://src/UI/Outdated/DialogTopic.tscn"

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
offset_left = 64.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 256.0
texture = SubResource("Resource_efttx")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Face" type="Sprite2D" parent="."]
position = Vector2(96, 224)
texture = SubResource("Resource_tui57")

[node name="SyndiBox" type="ReferenceRect" parent="."]
offset_left = 136.0
offset_top = 200.0
offset_right = 433.0
offset_bottom = 248.0
custom_minimum_size = Vector2(296, 48)
scale = Vector2(0.997449, 1)
script = SubResource("Resource_qfpbl")
__meta__ = {
"_edit_use_anchors_": false
}
ENABLE_SCROLLBAR = false
SCROLLBAR_FOLLOW = false
FONT = "res://src/UI/Cave-StoryFont.tres"
TEXT_VOICE = "res://assets/SFX/snd_msg.ogg"
ADVANCE_ACTION = "inspect"
PAUSE_AT_PUNCTUATION = true
PUNCTUATION_PAUSE_LENGTH = 1.0
CUSTOM_EFFECTS = "res://addons/SyndiBox/custom.gd"

[node name="FaceRect" type="ReferenceRect" parent="."]
offset_left = 136.0
offset_top = 200.0
offset_right = 432.0
offset_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoFaceRect" type="ReferenceRect" parent="."]
offset_left = 80.0
offset_top = 200.0
offset_right = 432.0
offset_bottom = 248.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBranch" parent="." instance=ExtResource("5")]
visible = false

[node name="DialogTopic" parent="."]
visible = false

[node name="Audio" type="AudioStreamPlayer" parent="."]

[connection signal="printing_finished" from="SyndiBox" to="." method="_on_SyndiBox_printing_finished"]
[connection signal="section_finished" from="SyndiBox" to="." method="_on_SyndiBox_section_finished"]
[connection signal="text_finished" from="SyndiBox" to="." method="_on_SyndiBox_text_finished"]
